--- a/TrySwiftData/CollectionViewCell.xib
+++ b/TrySwiftData/CollectionViewCell.xib
@@ -17,13 +17,13 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aao-a3-Iv2">
-                        <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
+                        <rect key="frame" x="0.0" y="0.0" width="170" height="127.66666666666667"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Aao-a3-Iv2" secondAttribute="height" multiplier="1:1" id="myZ-lj-Dxb"/>
+                            <constraint firstAttribute="width" secondItem="Aao-a3-Iv2" secondAttribute="height" multiplier="4:3" id="myZ-lj-Dxb"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="メニュー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M31-mX-XtD">
-                        <rect key="frame" x="53" y="184" width="64" height="21"/>
+                        <rect key="frame" x="53" y="141.66666666666666" width="64" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
